--- a/MC2-KisahKata/Base.lproj/Main.storyboard
+++ b/MC2-KisahKata/Base.lproj/Main.storyboard
@@ -460,7 +460,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LBX-Sg-YIy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1373.8461538461538" y="909.95260663507099"/>
+            <point key="canvasLocation" x="488" y="146"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="D9W-Ln-PGl">
@@ -548,8 +548,165 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="caq-cR-Hsn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="rtv-tf-6ev">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <viewLayoutGuide key="safeArea" id="VE2-Dj-p4e"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
             </objects>
-            <point key="canvasLocation" x="2160" y="909.95260663507099"/>
+            <point key="canvasLocation" x="488" y="1381"/>
+        </scene>
+        <!--Quiz View Controller-->
+        <scene sceneID="TP2-Lr-z2w">
+            <objects>
+                <viewController id="HUH-zE-wfY" customClass="QuizViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JTc-N7-F5D">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2SP-CU-9xb">
+                                <rect key="frame" x="27.666666666666657" y="105" width="335.66666666666674" height="335"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="335" id="6Zx-bc-IEi"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pertanyaan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2E-HN-u4y">
+                                <rect key="frame" x="60" y="480" width="270" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N92-pJ-J7C">
+                                <rect key="frame" x="28" y="557" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="335" id="KKo-bd-4Sx"/>
+                                    <constraint firstAttribute="height" constant="38" id="dw5-Xq-hnq"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5mA-5h-XSP">
+                                <rect key="frame" x="28" y="665" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="GxJ-dH-qDu"/>
+                                    <constraint firstAttribute="width" constant="335" id="wBe-ZC-kC1"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VsA-XP-teq">
+                                <rect key="frame" x="28" y="711" width="335" height="30"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f5-W1-0j0">
+                                <rect key="frame" x="28" y="611" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="oJk-m3-Sk0"/>
+                                    <constraint firstAttribute="width" constant="335" id="s9A-as-PVY"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2jD-d0-mjx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5mA-5h-XSP" firstAttribute="leading" secondItem="3f5-W1-0j0" secondAttribute="leading" id="0Ij-ge-ApF"/>
+                            <constraint firstItem="VsA-XP-teq" firstAttribute="leading" secondItem="2jD-d0-mjx" secondAttribute="leading" constant="28" id="9a8-L4-qfi"/>
+                            <constraint firstItem="2SP-CU-9xb" firstAttribute="leading" secondItem="2jD-d0-mjx" secondAttribute="leading" constant="27.666666666666657" id="FCz-dY-LR0"/>
+                            <constraint firstItem="2jD-d0-mjx" firstAttribute="trailing" secondItem="VsA-XP-teq" secondAttribute="trailing" constant="27" id="IeR-AK-xh3"/>
+                            <constraint firstItem="N92-pJ-J7C" firstAttribute="leading" secondItem="2jD-d0-mjx" secondAttribute="leading" constant="28" id="J2V-3F-y7t"/>
+                            <constraint firstItem="3f5-W1-0j0" firstAttribute="leading" secondItem="2jD-d0-mjx" secondAttribute="leading" constant="28" id="Jrm-9Q-0jb"/>
+                            <constraint firstItem="2jD-d0-mjx" firstAttribute="trailing" secondItem="3f5-W1-0j0" secondAttribute="trailing" constant="27" id="Lxd-go-RKS"/>
+                            <constraint firstItem="5mA-5h-XSP" firstAttribute="centerX" secondItem="2SP-CU-9xb" secondAttribute="centerX" id="OHf-Bc-dXV"/>
+                            <constraint firstItem="3f5-W1-0j0" firstAttribute="top" secondItem="N92-pJ-J7C" secondAttribute="bottom" constant="16" id="QYD-dr-aPb"/>
+                            <constraint firstItem="N92-pJ-J7C" firstAttribute="top" secondItem="f2E-HN-u4y" secondAttribute="bottom" constant="56" id="S3J-ui-Vlg"/>
+                            <constraint firstItem="VsA-XP-teq" firstAttribute="top" secondItem="5mA-5h-XSP" secondAttribute="bottom" constant="8" symbolic="YES" id="dmd-I4-XlF"/>
+                            <constraint firstItem="f2E-HN-u4y" firstAttribute="top" secondItem="2SP-CU-9xb" secondAttribute="bottom" constant="40" id="dyP-dq-5ki"/>
+                            <constraint firstItem="f2E-HN-u4y" firstAttribute="leading" secondItem="2jD-d0-mjx" secondAttribute="leading" constant="60" id="eHJ-2F-Cpy"/>
+                            <constraint firstItem="2jD-d0-mjx" firstAttribute="trailing" secondItem="N92-pJ-J7C" secondAttribute="trailing" constant="27" id="fou-I0-bCF"/>
+                            <constraint firstItem="2SP-CU-9xb" firstAttribute="centerX" secondItem="VsA-XP-teq" secondAttribute="centerX" id="sN7-eN-TnC"/>
+                            <constraint firstItem="2jD-d0-mjx" firstAttribute="trailing" secondItem="f2E-HN-u4y" secondAttribute="trailing" constant="60" id="sqd-dY-r6Z"/>
+                            <constraint firstItem="5mA-5h-XSP" firstAttribute="top" secondItem="3f5-W1-0j0" secondAttribute="bottom" constant="16" id="uyk-SS-x9R"/>
+                            <constraint firstItem="2SP-CU-9xb" firstAttribute="top" secondItem="JTc-N7-F5D" secondAttribute="top" constant="105" id="vTF-aj-wMD"/>
+                            <constraint firstItem="5mA-5h-XSP" firstAttribute="leading" secondItem="VsA-XP-teq" secondAttribute="leading" id="vbw-Lm-XzN"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W6F-Q4-Zk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="Iwa-Ah-ZyI">
+                    <rect key="frame" x="0.0" y="0.0" width="318" height="372"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHQ-HN-L98">
+                            <rect key="frame" x="89" y="7" width="140" height="140"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jawaban Kamu Salah" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="116-iF-jBn">
+                            <rect key="frame" x="45" y="148" width="229" height="89"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                            <color key="textColor" systemColor="systemRedColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="idE-Wf-4vq">
+                            <rect key="frame" x="30" y="307" width="259" height="38"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.19747427109999999" green="0.50120079520000005" blue="0.772585988" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jawaban Benar : Apel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7b6-IY-SC7">
+                            <rect key="frame" x="77" y="245" width="164" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="vcF-bn-9mo"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" id="FQ7-u6-sle">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="VaX-rY-aT9">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <blurEffect style="regular"/>
+                </visualEffectView>
+                <view contentMode="scaleToFill" id="gLI-f7-XKE">
+                    <rect key="frame" x="0.0" y="0.0" width="318" height="302"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E36-ge-uQ9">
+                            <rect key="frame" x="89" y="7" width="140" height="140"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jawaban Kamu Benar" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfN-oL-ape">
+                            <rect key="frame" x="45" y="148" width="229" height="89"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                            <color key="textColor" systemColor="systemGreenColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gaa-lc-BUa">
+                            <rect key="frame" x="30" y="244" width="259" height="38"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.19747427109999999" green="0.50120079520000005" blue="0.772585988" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="A69-Og-YzG"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
+            </objects>
+            <point key="canvasLocation" x="1668" y="1420"/>
         </scene>
     </scenes>
     <resources>
@@ -569,6 +726,12 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
